--- a/templates/subscriptions/invoice_pdf.html
+++ b/templates/subscriptions/invoice_pdf.html
@@ -270,6 +270,13 @@
         <!-- Header -->
         <div class="invoice-header">
             <div class="company-info">
+                <!-- Business Logo -->
+                {% if business.tenant_settings.business_logo %}
+                <div class="business-logo" style="margin-bottom: 10px;">
+                    <img src="{{ business.tenant_settings.business_logo.url }}" alt="AutoWash App Logo" style="max-height: 60px; max-width: 200px;">
+                </div>
+                {% endif %}
+                
                 <div class="company-logo">AutoWash App Limited</div>
                 <div class="company-details">
                     Smart Car Care Management System<br>
